--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
 node_js:
-  - 12.16.2
+  - node
   - lts/*
 install:
-  - npm i
-cache: npm
+  - npm ci
 script:
   - npm run lint-sass
   - npm run lint-js
