--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: node_js
 node_js:
   - node
-  - lts/*
 install:
   - npm i
 script:
   - npm run lint-sass
   - npm run lint-js
-  - npm run production
+  - npm run build
 deploy:
   provider: pages
   skip-cleanup: true
